--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <!--col A-->
-    <View
+    <ImageView
         android:id="@+id/a1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -18,7 +18,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -29,7 +29,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -40,7 +40,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -51,7 +51,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -62,7 +62,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -73,7 +73,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -84,7 +84,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/a8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -96,7 +96,7 @@
         android:orientation="horizontal" />
 
     <!--col B-->
-    <View
+    <ImageView
         android:id="@+id/b1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -107,7 +107,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -118,7 +118,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -129,7 +129,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -140,7 +140,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -151,7 +151,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -162,7 +162,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -173,7 +173,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/b8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -185,7 +185,7 @@
         android:orientation="horizontal" />
 
     <!--col C-->
-    <View
+    <ImageView
         android:id="@+id/c1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -196,7 +196,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -207,7 +207,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -218,7 +218,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -229,7 +229,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -240,7 +240,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -251,7 +251,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -262,7 +262,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/c8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -274,7 +274,7 @@
         android:orientation="horizontal" />
 
     <!--col D-->
-    <View
+    <ImageView
         android:id="@+id/d1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -285,7 +285,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -296,7 +296,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -307,7 +307,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -318,7 +318,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -329,7 +329,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -340,7 +340,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -351,7 +351,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/d8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -363,7 +363,7 @@
         android:orientation="horizontal" />
 
     <!--col E-->
-    <View
+    <ImageView
         android:id="@+id/e1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -374,7 +374,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -385,7 +385,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -396,7 +396,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -407,7 +407,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -418,7 +418,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -429,7 +429,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -440,7 +440,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/e8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -452,7 +452,7 @@
         android:orientation="horizontal" />
 
     <!--col F-->
-    <View
+    <ImageView
         android:id="@+id/f1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -463,7 +463,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -474,7 +474,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -485,7 +485,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -496,7 +496,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -507,7 +507,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -518,7 +518,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -529,7 +529,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/f8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -541,7 +541,7 @@
         android:orientation="horizontal" />
 
     <!--col G-->
-    <View
+    <ImageView
         android:id="@+id/g1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -552,7 +552,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -563,7 +563,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -574,7 +574,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -585,7 +585,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -596,7 +596,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -607,7 +607,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -618,7 +618,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/g8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -630,7 +630,7 @@
         android:orientation="horizontal" />
 
     <!--col H-->
-    <View
+    <ImageView
         android:id="@+id/h1"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -641,7 +641,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h2"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -652,7 +652,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h3"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -663,7 +663,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h4"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -674,7 +674,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h5"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -685,7 +685,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h6"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -696,7 +696,7 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h7"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
@@ -707,7 +707,7 @@
         android:background="@color/white"
         android:orientation="horizontal" />
 
-    <View
+    <ImageView
         android:id="@+id/h8"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent=".125"
