--- a/app/src/main/res/drawable/chess_piece_queen_black.xml
+++ b/app/src/main/res/drawable/chess_piece_queen_black.xml
@@ -7,98 +7,54 @@
       android:pathData="M9,26C17.5,24.5 30,24.5 36,26L38.5,13.5L31,25L30.7,10.9L25.5,24.5L22.5,10L19.5,24.5L14.3,10.9L14,25L6.5,13.5L9,26z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="butt"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
-      android:pathData="m9,26c0,2 1.5,2 2.5,4 1,1.5 1,1 0.5,3.5 -1.5,1 -1,2.5 -1,2.5 -1.5,1.5 0,2.5 0,2.5 6.5,1 16.5,1 23,0 0,0 1.5,-1 0,-2.5 0,0 0.5,-1.5 -1,-2.5 -0.5,-2.5 -0.5,-2 0.5,-3.5 1,-2 2.5,-2 2.5,-4 -8.5,-1.5 -18.5,-1.5 -27,0z"
+      android:pathData="M9,26C9,28 10.5,28 11.5,30C12.5,31.5 12.5,31 12,33.5C10.5,34.5 11,36 11,36C9.5,37.5 11,38.5 11,38.5C17.5,39.5 27.5,39.5 34,38.5C34,38.5 35.5,37.5 34,36C34,36 34.5,34.5 33,33.5C32.5,31 32.5,31.5 33.5,30C34.5,28 36,28 36,26C27.5,24.5 17.5,24.5 9,26z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M11.5,30C15,29 30,29 33.5,30"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#00000000"
+      android:strokeColor="#fff"/>
   <path
-      android:pathData="m12,33.5c6,-1 15,-1 21,0"
+      android:pathData="M12,33.5C18,32.5 27,32.5 33,33.5"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#00000000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M6,12m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M14,9m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M22.5,8m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M31,9m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
   <path
       android:pathData="M39,12m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M11,38.5A35,35 1,0 0,34 38.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="M11,29A35,35 1,0 1,34 29"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M12.5,31.5L32.5,31.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M11.5,34.5A35,35 1,0 0,33.5 34.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M10.5,37.5A35,35 1,0 0,34.5 37.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+      android:fillColor="#000"
+      android:strokeColor="#fff"/>
 </vector>
