--- a/app/src/main/res/drawable/chess_piece_king_black.xml
+++ b/app/src/main/res/drawable/chess_piece_king_black.xml
@@ -4,51 +4,35 @@
     android:viewportWidth="45"
     android:viewportHeight="45">
   <path
-      android:pathData="M22.5,11.63L22.5,6"
+      android:pathData="M22.5,11.63V6M20,8h5"
       android:strokeLineJoin="miter"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
       android:fillType="evenOdd"
+      android:strokeColor="#000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M22.5,25C22.5,25 27,17.5 25.5,14.5C25.5,14.5 24.5,12 22.5,12C20.5,12 19.5,14.5 19.5,14.5C18,17.5 22.5,25 22.5,25"
+      android:pathData="M22.5,25s4.5,-7.5 3,-10.5c0,0 -1,-2.5 -3,-2.5s-3,2.5 -3,2.5c-1.5,3 3,10.5 3,10.5"
       android:strokeLineJoin="miter"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
+      android:fillColor="#000"
       android:fillType="evenOdd"
+      android:strokeColor="#FFF"
       android:strokeLineCap="butt"/>
   <path
-      android:pathData="M12.5,37C18,40.5 27,40.5 32.5,37L32.5,30C32.5,30 41.5,25.5 38.5,19.5C34.5,13 25,16 22.5,23.5L22.5,27L22.5,23.5C20,16 10.5,13 6.5,19.5C3.5,25.5 12.5,30 12.5,30L12.5,37"
+      android:pathData="M12.5,37c5.5,3.5 14.5,3.5 20,0v-7s9,-4.5 6,-10.5c-4,-6.5 -13.5,-3.5 -16,4V27v-3.5c-2.5,-7.5 -12,-10.5 -16,-4 -3,6 6,10.5 6,10.5v7"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#000000"
-      android:strokeColor="#000000"
+      android:fillColor="#000"
       android:fillType="evenOdd"
+      android:strokeColor="#fff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M20,8L25,8"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:fillType="evenOdd"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M32,29.5C32,29.5 40.5,25.5 38.03,19.85C34.15,14 25,18 22.5,24.5L22.5,26.6L22.5,24.5C20,18 10.85,14 6.97,19.85C4.5,25.5 13,29.5 13,29.5"
+      android:pathData="M12.5,30c5.5,-3 14.5,-3 20,0m-20,3.5c5.5,-3 14.5,-3 20,0m-20,3.5c5.5,-3 14.5,-3 20,0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
       android:fillType="evenOdd"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M12.5,30C18,27 27,27 32.5,30M12.5,33.5C18,30.5 27,30.5 32.5,33.5M12.5,37C18,34 27,34 32.5,37"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:fillType="evenOdd"
+      android:strokeColor="#fff"
       android:strokeLineCap="round"/>
 </vector>
