--- a/app/src/main/res/drawable/chess_piece_king_white.xml
+++ b/app/src/main/res/drawable/chess_piece_king_white.xml
@@ -9,7 +9,7 @@
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#000"
+      android:strokeColor="#fff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M22.5,25s4.5,-7.5 3,-10.5c0,0 -1,-2.5 -3,-2.5s-3,2.5 -3,2.5c-1.5,3 3,10.5 3,10.5"
