--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -718,4 +718,14 @@
         android:background="@color/black"
         android:orientation="horizontal" />
 
+    <Button
+        android:id="@+id/new_game_button"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/new_game" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
