--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FF0</color>
     <color name="blue">#00F</color>
+    <color name="red">#F00</color>
 </resources>
