--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -782,6 +782,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".125" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/game_over_text"
+        app:layout_constraintTop_toBottomOf="@id/a1"
+        android:textSize="50dp"
+        android:textColor=""/>
     <Button
         android:id="@+id/new_game_button"
         android:layout_width="200dp"
