--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="yellow">#FF0</color>
     <color name="blue">#00F</color>
     <color name="brown">#773f1a</color>
+    <color name="red">#F00</color>
 </resources>
