--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -786,9 +786,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/game_over_text"
-        app:layout_constraintTop_toBottomOf="@id/a1"
-        android:textSize="50dp"
-        android:textColor=""/>
+        app:layout_constraintTop_toBottomOf="@id/a1" />
     <Button
         android:id="@+id/new_game_button"
         android:layout_width="200dp"
