--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blue">#00F</color>
     <color name="brown">#773f1a</color>
     <color name="red">#F00</color>
+    <color name="green">#4CAF50</color>
 </resources>
